--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.5.0",
     "antd": "^4.9.2",
     "axios": "^0.21.0",
+    "jwt-decode": "^3.1.2",
     "rc-queue-anim": "^1.8.5",
     "rc-scroll-anim": "^2.7.6",
     "react": "^17.0.1",
