--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.16",
     "socket.io-client": "^3.0.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
