--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.9.2",
     "axios": "^0.21.0",
     "jwt-decode": "^3.1.2",
+    "query-string": "^6.13.7",
     "rc-queue-anim": "^1.8.5",
     "rc-scroll-anim": "^2.7.6",
     "react": "^17.0.1",
