--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "ant-design-draggable-modal": "^1.0.0",
     "antd": "^4.9.2",
     "axios": "^0.21.0",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.20",
     "query-string": "^6.13.7",
     "rc-queue-anim": "^1.8.5",
     "rc-scroll-anim": "^2.7.6",
